--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@babylonjs/core": "^6.25.0",
+    "@babylonjs/gui": "^6.25.0",
+    "@babylonjs/materials": "^6.25.0",
+    "@babylonjs/post-processes": "^6.25.0",
+    "@babylonjs/procedural-textures": "^6.25.0",
+    "@babylonjs/serializers": "^6.25.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -26,6 +35,8 @@
     "@angular-devkit/build-angular": "^16.2.7",
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
+    "@babylonjs/inspector": "^6.25.0",
+    "@babylonjs/loaders": "^6.25.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
